@@ -1,5 +1,6 @@
 <HTML><title>Changelog for Etherape</title><BODY>
 <h3>Overview of changes in CVS Etherape 0.1.7 (Tuesday 02-28-2000):</h3><ul>
+<li>Added libm to autoconf.in for systems with a separate math lib.
 <li>Pcap filtering added. Now you can use tcpdump style filtering 
 (enclosed in quotes) with the -f option.
 </ul>
